welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: value AND is not a member of Boolean
else if(die1 == die2 AND noDoubles == true)
                     ^withoutDoubles:8: error: type mismatch;
 found   : Unit
 required: Int
else if(die1 == die2 AND noDoubles == true)
     ^